--- a/app/views/latest/no-informant/submit/register-page.html
+++ b/app/views/latest/no-informant/submit/register-page.html
@@ -24,7 +24,7 @@ Select the registrar’s designation – {{ serviceName }} – GOV.UK Prototype 
           <h1 class="govuk-heading-l">
             Register page 
           </h1>
-          <form class="form" action="register-page-form" method="post">
+          <form class="form" action="/latest/no-informant/register-page-form" method="post">
             
 
        <div class="govuk-form-group">
