--- a/app/views/latest/no-informant/supporting-info/uploads.html
+++ b/app/views/latest/no-informant/supporting-info/uploads.html
@@ -15,7 +15,7 @@
 
 
 
-      <form class="form" action="uploads-form" method="post">
+      <form class="form" action="/latest/no-informant/uploads-form" method="post">
 
    
   
