no informant check answers working

--- a/app/views/latest/no-informant/submit/check-answers-page.html
+++ b/app/views/latest/no-informant/submit/check-answers-page.html
@@ -79,7 +79,7 @@
     {{ data['mothersFirstName'] or 'Anna' }} {{ data['mothersMiddleName'] or 'Marie' }} {{ data['mothersLastName'] or 'Duffy' }}
   </dd>
   <dd class="govuk-summary-list__actions">
-    <a class="govuk-link" href="../parents-details/mothers-name">Change<span class="govuk-visually-hidden"> mother's full name</span></a>
+    <a class="govuk-link" href="../child-details/parents-details.html">Change<span class="govuk-visually-hidden"> mother's full name</span></a>
   </dd>
 </div>
 
@@ -93,7 +93,7 @@
         {{ data['mothersOccupation'] or "Florist" }}
       </dd>
       <dd class="govuk-summary-list__actions">
-        <a class="govuk-link" href="../parents-details/mothers-details">Change<span class="govuk-visually-hidden"> last name</span></a>
+        <a class="govuk-link" href="../child-details/parents-details.html">Change<span class="govuk-visually-hidden"> last name</span></a>
       </dd>
     </div>
 
@@ -107,7 +107,7 @@
  
       </dd>
       <dd class="govuk-summary-list__actions">
-        <a class="govuk-link" href="../parents-details/fathers-name">Change<span class="govuk-visually-hidden"> first name</span></a>
+        <a class="govuk-link" href="../child-details/parents-details.html">Change<span class="govuk-visually-hidden"> first name</span></a>
       </dd>
     </div>
 
@@ -120,7 +120,7 @@
         {{ data['fathersOccupation'] or "Cobbler" }}
       </dd>
       <dd class="govuk-summary-list__actions">
-        <a class="govuk-link" href="../parents-details/fathers-details">Change<span class="govuk-visually-hidden"> last name</span></a>
+        <a class="govuk-link" href="../child-details/parents-details.html">Change<span class="govuk-visually-hidden"> last name</span></a>
       </dd>
     </div>
     
