--- a/app/views/index.html
+++ b/app/views/index.html
@@ -35,10 +35,10 @@
      </p>
    
       <p class="govuk-body">
-      <a href="coroner-inquest/task-list.html">Inquest task list</a> 
+      <a href="latest/no-informant/task-list.html">No informant task list</a>
     </p>
      <p class="govuk-body">
-      <a href="latest/task-list.html">Informant-led task list</a> 
+      <a href="latest/informant/task-list.html">Informant-led task list</a> 
     </p>
  
     
