attempt to pass the radio to the task list. not working yet

--- a/app/views/latest/informant/informant-triage/05-check.html
+++ b/app/views/latest/informant/informant-triage/05-check.html
@@ -26,7 +26,7 @@ href: "javascript:window.history.back()"
         </dt>
         <dd class="govuk-summary-list__value">
           {% set whoIsInformantText = {
-          "mother": "Motherr",
+          "mother": "Mother",
           "father": "Father",
           "secondParent": "Second parent",
           "motherAndFather": "Mother and father",
