--- a/app/views/latest/04-medical-info.html
+++ b/app/views/latest/04-medical-info.html
@@ -16,65 +16,54 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <!-- <h1 class="govuk-heading-l">
-        Was more than one child born in this pregnancy?
-      </h1> 
-      <p>
-          This includes both live births and stillbirths.
-        </p>
-      -->
-
-      <form class="form" action="/latest/medical-info-form" method="post">
-
-        
 
 
-        
-{% from "govuk/components/radios/macro.njk" import govukRadios %}
-
-{{ govukRadios({
-  name: "medicalInfoSource",
-  fieldset: {
-    legend: {
-      text: "Where is the medical information about the stillbirth taken from?",
-      isPageHeading: true,
-      classes: "govuk-fieldset__legend--l"
-    }
-  },
-  items: [
-    {
-      value: "1-informant",
-      text: "Medical certificate of stillbirth (form 34)"
-    },
-    {
-      value: "2",
-      text: "Coroner's post-mortem",
-      conditional: {
-        html: govukRadios({
-          name: "postMortemDetail",
-          items: [
-            {
-              value: "2-with-inf",
-              text: "With informant"
-            },
-            {
-              value: "2-no-inf",
-              text: "Without informant"
-            }
-          ]
-        })
+<form class="form" method="POST" action="/latest/task-list-form">
+  
+  {% from "govuk/components/radios/macro.njk" import govukRadios %}
+  {{ govukRadios({
+    name: "userMedicalInfoSource",
+    fieldset: {
+      legend: {
+        text: "Where is the medical information about the stillbirth taken from?",
+        isPageHeading: true,
+        classes: "govuk-fieldset__legend--l"
       }
     },
-    {
-      value: "3-no-inf",
-      text: "Coroner's inquest"
-    },
-    {
-      value: "4-informant",
-      text: "There was no medical professional involved (form 35)"
-    }
-  ]
-}) }}
+    items: [
+      {
+        value: "1-informant",
+        text: "Medical certificate of stillbirth (form 34)"
+      },
+      {
+        value: "2",
+        text: "Coroner's post-mortem",
+        conditional: {
+          html: govukRadios({
+            name: "userPostMortemDetail",
+            items: [
+              {
+                value: "2-with-inf",
+                text: "With informant"
+              },
+              {
+                value: "2-no-inf",
+                text: "Without informant"
+              }
+            ]
+          })
+        }
+      },
+      {
+        value: "3-no-inf",
+        text: "Coroner's inquest"
+      },
+      {
+        value: "4-informant",
+        text: "There was no medical professional involved (form 35)"
+      }
+    ]
+  }) }}
 
 
         {{ govukButton({
