--- a/app/views/latest/informant/task-list.html
+++ b/app/views/latest/informant/task-list.html
@@ -60,14 +60,38 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
       </li>
     </ul>
 
-    <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Information from medical certificate</h2>
+    <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Source of medical information</h2>
    
 
 
 <ul class="govuk-task-list">
   <li class="govuk-task-list__item">
     <div class="govuk-task-list__name-and-hint">
+
+ <p class="govuk-body">
+   
+    <strong class="govuk-!-font-weight-bold">
+       {{userMedicalInfoSource}}
+    </strong>
+  </p>
+
+  {% if userMedicalInfoSource == "2" and userPostMortemDetail == "2-with-inf" %}
+      Coroner's post-mortem (CN2), with informant
+    {% elif userMedicalInfoSource == "1-informant" %}
       Medical certificate of stillbirth (form 34)
+    {% elif userMedicalInfoSource == "4-informant" %}
+      No medical professional involved (form 35)
+    {% elif userMedicalInfoSource == "2" and userPostMortemDetail == "2-no-inf" %}
+      Coroner's post-mortem (CN2), without informant
+    {% elif userMedicalInfoSource == "3-no-inf" %}
+      Coroner's inquest
+    {% else %}
+      No selection made
+    {% endif %}
+
+
+      <!-- {{ userMedicalInfoSource | default("No selection made") }}
+      
       {% if userMedicalInfoSource == "2" and userPostMortemDetail == "2-with-inf" %}
         Coroner's post mortem (CN2), with informant
      
@@ -76,13 +100,10 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
     
       {% elif userMedicalInfoSource == "4-informant" %}
         No medical professional involved (form 35)
-      {% else %}
-       
+     {% else %}
+        Medical certificate of stillbirth 
 
-<!-- <p>Source: {{ userMedicalInfoSource }}</p>
-<p>Detail: {{ userPostMortemDetail }}</p> -->
-
-      {% endif %}
+      {% endif %} -->
     </div>
     <div class="govuk-task-list__status">
       Completed
