--- a/app/views/latest/no-informant/submit/sign-page.html
+++ b/app/views/latest/no-informant/submit/sign-page.html
@@ -16,35 +16,11 @@
     <div class="govuk-grid-column-two-thirds-from-desktop">
 
       <h1 class="govuk-heading-xl">
-        Check your answers before sending your application
+        Declaration
       </h1>
       
 
- 
 
-
-
-  <div class="govuk-grid-row govuk-grid-column-full">
-    {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
-
-{{ govukCheckboxes({
-  name: "waste",
-  fieldset: {
-    legend: {
-      text: " ",
-      isPageHeading: false,
-      classes: "govuk-body"
-    }
-  },
-
-  items: [
-    {
-      value: "farm",
-      text: "Informant has confirmed that the particulars given by them are true to the best of their knowledge and belief."
-    }
-  ]
-}) }}
-  </div>
 
     <div class="govuk-grid-row govuk-grid-column-full">
     {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
