--- a/app/views/latest/no-informant/task-list.html
+++ b/app/views/latest/no-informant/task-list.html
@@ -65,7 +65,8 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-         Coroner’s inquest (99revA)
+            {{ userMedicalInfoSource | default("No selection made") }}
+         <!-- Coroner’s inquest (99revA) -->
         </div>
         <div class="govuk-task-list__status">
           Completed
@@ -154,100 +155,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
       </li>
     </ul>
 
-    <!-- <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Parent's details</h2>
-     <ul class="govuk-task-list">
-      <li class="govuk-task-list__item">
-        <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="parents-details/mothers-name">
-            Mother's name
-          </a>
-        </div>
-        <div class="govuk-task-list__status">
-          {% if data.mothersNameCompleted %}
-          Completed
-          {% else %}
-          <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
-          {% endif %}
-        </div>
-      </li>
-
-      <li class="govuk-task-list__item">
-        <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="parents-details/mothers-details">
-            Mother's details
-          </a>
-        </div>
-        <div class="govuk-task-list__status">
-           {% if data.mothersDetailsCompleted %}
-          Completed
-          {% else %}
-          <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
-          {% endif %}
-        </div>
-      </li>
-       <li class="govuk-task-list__item">
-        <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="parents-details/fathers-name">
-            Father's name
-          </a>
-        </div>
-        <div class="govuk-task-list__status">
-          {% if data.fathersNameCompleted %}
-          Completed
-          {% else %}
-          <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
-          {% endif %}
-        </div>
-      </li>
-
-      <li class="govuk-task-list__item">
-        <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="parents-details/fathers-details">
-            Father's details
-          </a>
-        </div>
-        <div class="govuk-task-list__status">
-           {% if data.fathersDetailsCompleted %}
-          Completed
-          {% else %}
-          <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
-          {% endif %}
-        </div>
-      </li>
-    </ul> 
-
-    <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Statistics</h2>
-     <ul class="govuk-task-list">
-      <li class="govuk-task-list__item">
-        <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="stats/confidential">
-            Confidential statistics
-          </a>
-        </div>
-        <div class="govuk-task-list__status">
-          {% if data.statsConfidentialCompleted %}
-          Completed
-          {% else %}
-          <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
-          {% endif %}
-        </div>
-      </li>
-
-      <li class="govuk-task-list__item">
-        <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="stats/voluntary">
-            Voluntary statistics
-          </a>
-        </div>
-        <div class="govuk-task-list__status">
-           {% if data.statsVoluntaryCompleted %}
-          Completed
-          {% else %}
-          <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
-          {% endif %}
-        </div>
-      </li>
-      </ul> -->
+  
 
     <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Submit the registration</h2>
      <ul class="govuk-task-list">
