--- a/app/views/latest/informant/cause-of-death/medical-info-check.html
+++ b/app/views/latest/informant/cause-of-death/medical-info-check.html
@@ -27,7 +27,16 @@
               Source of information for this stillbirth
             </dt>
             <dd class="govuk-summary-list__value">
-              Medical certificate of stillbirth (form 34)
+              
+ {% if data.userMedicalInfoSource == "1-informant" %}
+  Medical certificate of stillbirth (form 34)
+{% elif data.userMedicalInfoSource == "4-informant" %}
+  There was no medical professional involved (form 35)
+  {% elif data.userPostMortemDetail == "2-with-inf" %}
+    Coroner's post-mortem with informant (CN2)
+{% else %}
+   Medical certificate of stillbirth (form-34)
+{% endif %}
               <p class="govuk-task-list__hint">You can't change the certificate type</p>
             </dd>
             <!-- <dd class="govuk-summary-list__actions">
