--- a/app/views/latest/informant/stats/confidential.html
+++ b/app/views/latest/informant/stats/confidential.html
@@ -250,26 +250,60 @@ href: "javascript:window.history.back()"
 
 
 
-      <!-- dont name their child only these show -->
-
-
 <div class="govuk-form-group">
   <fieldset class="govuk-fieldset" aria-describedby="marriageDateKnown-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
       Do you know the date of the parent's marriage?
     </legend>
 
-    <div class="govuk-radios" data-module="govuk-radios">
-      <!-- Option 1: Yes -->
+    <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" type="radio" id="marriageDateKnown-yes" name="marriageDateKnown"
-               value="MARRIAGE_DATE_KNOWN">
+               value="MARRIAGE_DATE_KNOWN" data-aria-controls="conditional-marriageDateKnown-yes">
         <label class="govuk-label govuk-radios__label" for="marriageDateKnown-yes">
           Yes
         </label>
       </div>
 
-      <!-- Option 2: No -->
+      <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-marriageDateKnown-yes">
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset" role="group" aria-describedby="marriage-date-hint">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+              Date of marriage
+            </legend>
+            <div id="marriage-date-hint" class="govuk-hint">
+              For example, 23 11 2024
+            </div>
+            <div class="govuk-date-input" id="marriageDate">
+              <div class="govuk-date-input__item">
+                <div class="govuk-form-group">
+                  <label class="govuk-label govuk-date-input__label" for="marriageDate-day">
+                    Day
+                  </label>
+                  <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="marriageDate-day" name="marriageDate-day" type="text" inputmode="numeric">
+                </div>
+              </div>
+              <div class="govuk-date-input__item">
+                <div class="govuk-form-group">
+                  <label class="govuk-label govuk-date-input__label" for="marriageDate-month">
+                    Month
+                  </label>
+                  <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="marriageDate-month" name="marriageDate-month" type="text" inputmode="numeric">
+                </div>
+              </div>
+              <div class="govuk-date-input__item">
+                <div class="govuk-form-group">
+                  <label class="govuk-label govuk-date-input__label" for="marriageDate-year">
+                    Year
+                  </label>
+                  <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="marriageDate-year" name="marriageDate-year" type="text" inputmode="numeric">
+                </div>
+              </div>
+            </div>
+          </fieldset>
+        </div>
+      </div>
+
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" type="radio" id="marriageDateKnown-no" name="marriageDateKnown"
                value="MARRIAGE_DATE_UNKNOWN">
@@ -278,7 +312,6 @@ href: "javascript:window.history.back()"
         </label>
       </div>
 
-      <!-- Option 3: Refused -->
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" type="radio" id="marriageDateKnown-refused" name="marriageDateKnown"
                value="MARRIAGE_DATE_REFUSED">
@@ -289,6 +322,46 @@ href: "javascript:window.history.back()"
     </div>
   </fieldset>
 </div>
+
+     
+
+<!-- 
+<div class="govuk-form-group">
+  <fieldset class="govuk-fieldset" aria-describedby="marriageDateKnown-hint">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+      Do you know the date of the parent's marriage?
+    </legend>
+
+    <div class="govuk-radios" data-module="govuk-radios">
+    
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" type="radio" id="marriageDateKnown-yes" name="marriageDateKnown"
+               value="MARRIAGE_DATE_KNOWN">
+        <label class="govuk-label govuk-radios__label" for="marriageDateKnown-yes">
+          Yes
+        </label>
+      </div>
+
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" type="radio" id="marriageDateKnown-no" name="marriageDateKnown"
+               value="MARRIAGE_DATE_UNKNOWN">
+        <label class="govuk-label govuk-radios__label" for="marriageDateKnown-no">
+          No
+        </label>
+      </div>
+
+    
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" type="radio" id="marriageDateKnown-refused" name="marriageDateKnown"
+               value="MARRIAGE_DATE_REFUSED">
+        <label class="govuk-label govuk-radios__label" for="marriageDateKnown-refused">
+          Refused to answer
+        </label>
+      </div>
+    </div>
+  </fieldset>
+</div> -->
 
 
 
@@ -331,24 +404,30 @@ href: "javascript:window.history.back()"
 
 
 
-
 <div class="govuk-form-group">
   <fieldset class="govuk-fieldset" aria-describedby="liveBirthsMother-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
       Has the mother had any children born alive before?
     </legend>
 
-    <div class="govuk-radios" data-module="govuk-radios">
-      <!-- Option 1: Yes -->
+    <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" type="radio" id="liveBirthsMother-yes" name="liveBirthsMother"
-               value="LIVE_BIRTHS_MOTHER_YES">
+               value="LIVE_BIRTHS_MOTHER_YES" data-aria-controls="conditional-liveBirthsMother-yes">
         <label class="govuk-label govuk-radios__label" for="liveBirthsMother-yes">
           Yes
         </label>
       </div>
 
-      <!-- Option 2: No -->
+      <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-liveBirthsMother-yes">
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="numberOfChildrenBornAlive">
+            Number of children born alive
+          </label>
+          <input class="govuk-input govuk-input--width-5" id="numberOfChildrenBornAlive" name="numberOfChildrenBornAlive" type="text">
+        </div>
+      </div>
+
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" type="radio" id="liveBirthsMother-no" name="liveBirthsMother"
                value="LIVE_BIRTHS_MOTHER_NO">
@@ -357,7 +436,6 @@ href: "javascript:window.history.back()"
         </label>
       </div>
 
-      <!-- Option 3: Not known -->
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" type="radio" id="liveBirthsMother-unknown" name="liveBirthsMother"
                value="LIVE_BIRTHS_MOTHER_UNKNOWN">
@@ -366,7 +444,6 @@ href: "javascript:window.history.back()"
         </label>
       </div>
 
-      <!-- Option 4: Refused to answer -->
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" type="radio" id="liveBirthsMother-refused" name="liveBirthsMother"
                value="LIVE_BIRTHS_MOTHER_REFUSED">
@@ -379,24 +456,30 @@ href: "javascript:window.history.back()"
 </div>
 
 
-
 <div class="govuk-form-group">
   <fieldset class="govuk-fieldset" aria-describedby="stillbirthsMother-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
       Has the mother had any stillborn children before?
     </legend>
 
-    <div class="govuk-radios" data-module="govuk-radios">
-      <!-- Option 1: Yes -->
+    <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" type="radio" id="stillbirthsMother-yes" name="stillbirthsMother"
-               value="STILLBIRTHS_MOTHER_YES">
+               value="STILLBIRTHS_MOTHER_YES" data-aria-controls="conditional-stillbirthsMother-yes">
         <label class="govuk-label govuk-radios__label" for="stillbirthsMother-yes">
           Yes
         </label>
       </div>
 
-      <!-- Option 2: No -->
+      <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-stillbirthsMother-yes">
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="numberOfStillbornChildren">
+            Number of stillborn children
+          </label>
+          <input class="govuk-input govuk-input--width-5" id="numberOfStillbornChildren" name="numberOfStillbornChildren" type="text">
+        </div>
+      </div>
+
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" type="radio" id="stillbirthsMother-no" name="stillbirthsMother"
                value="STILLBIRTHS_MOTHER_NO">
@@ -405,7 +488,6 @@ href: "javascript:window.history.back()"
         </label>
       </div>
 
-      <!-- Option 3: Not known -->
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" type="radio" id="stillbirthsMother-unknown" name="stillbirthsMother"
                value="STILLBIRTHS_MOTHER_UNKNOWN">
@@ -414,7 +496,6 @@ href: "javascript:window.history.back()"
         </label>
       </div>
 
-      <!-- Option 4: Refused to answer -->
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" type="radio" id="stillbirthsMother-refused" name="stillbirthsMother"
                value="STILLBIRTHS_MOTHER_REFUSED">
@@ -425,6 +506,50 @@ href: "javascript:window.history.back()"
     </div>
   </fieldset>
 </div>
+
+
+<!-- <div class="govuk-form-group">
+  <fieldset class="govuk-fieldset" aria-describedby="stillbirthsMother-hint">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+      Has the mother had any stillborn children before?
+    </legend>
+
+    <div class="govuk-radios" data-module="govuk-radios">
+   
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" type="radio" id="stillbirthsMother-yes" name="stillbirthsMother"
+               value="STILLBIRTHS_MOTHER_YES">
+        <label class="govuk-label govuk-radios__label" for="stillbirthsMother-yes">
+          Yes
+        </label>
+      </div>
+  
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" type="radio" id="stillbirthsMother-no" name="stillbirthsMother"
+               value="STILLBIRTHS_MOTHER_NO">
+        <label class="govuk-label govuk-radios__label" for="stillbirthsMother-no">
+          No
+        </label>
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" type="radio" id="stillbirthsMother-unknown" name="stillbirthsMother"
+               value="STILLBIRTHS_MOTHER_UNKNOWN">
+        <label class="govuk-label govuk-radios__label" for="stillbirthsMother-unknown">
+          Not known
+        </label>
+      </div>
+  
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" type="radio" id="stillbirthsMother-refused" name="stillbirthsMother"
+               value="STILLBIRTHS_MOTHER_REFUSED">
+        <label class="govuk-label govuk-radios__label" for="stillbirthsMother-refused">
+          Refused to answer
+        </label>
+      </div>
+    </div>
+  </fieldset>
+</div> -->
 
 
 
