--- a/app/views/index.html
+++ b/app/views/index.html
@@ -15,16 +15,21 @@
      <!-- Inquest -->
      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
-     <h2 class="govuk-heading-l govuk-!-margin-bottom-2">CN2 &amp; 99revA</h2>
+     <h2 class="govuk-heading-l govuk-!-margin-bottom-2">With and without informants</h2>
      
      <p class="govuk-body">
-       This prototype has 2 scenarios - these depend on what user selects on the 'Source of medical information' radio buttons. 
-       
+       This prototype caters for a few scenarios - these depend on what user selects on the 'Source of medical information' radio buttons. 
+       </p>
+        <p class="govuk-body">
+       Scenarios: 
+       </p>
        <ul class="govuk-list govuk-list--bullet">
-        <li>Coroner with informant registration</li>
-        <li>Coroner inquest - 99revA (this journey doesn't have an informant)</li>
+        <li>Medical certificate of stillbirth (form 34) </li>
+         <li>Coroner with informant registration (CN2)</li>
+        <li>Coroner without informant registration (CN2)</li>
+        <li>Coroner inquest - 99revA (no informant)</li>
        </ul>
-     </p>
+     
      
      <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Round 2: <strong class="govuk-tag govuk-tag--grey govuk-!-margin-bottom-2">
        Not yet tested
