CN2 with informant in informant tasklist

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,7 +7,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-
+<div class="govuk-!-margin-bottom-9">
     <h1 class="govuk-heading-xl">
       Prototypes for stillbirth
     </h1>
@@ -36,15 +36,16 @@
      </strong></h3>
  
      <p class="govuk-body">
-       <a href="00-sign-in.html">From sign in page</a> 
+       <a href="00-sign-in.html">Sign in page</a> 
      </p>
-   
-      <p class="govuk-body">
+     <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+   </div>
+      <!-- <p class="govuk-body">
       <a href="latest/no-informant/task-list.html">No informant task list</a>
     </p>
      <p class="govuk-body">
       <a href="latest/informant/task-list.html">Informant-led task list</a> 
-    </p>
+    </p> -->
  
     
 
@@ -53,9 +54,9 @@
   
 
      <!-- Informant -->
-     <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+     
 
-     <h2 class="govuk-heading-l govuk-!-margin-bottom-2">Informan led (Figma)</h2>
+     <h2 class="govuk-heading-l govuk-!-margin-bottom-2">Informant led (Figma)</h2>
      
      <p class="govuk-body">
        Exploratory research with registrars and first draft of Figma prototype
